--- a/coin-collector/package.json
+++ b/coin-collector/package.json
@@ -51,6 +51,7 @@
     "electron-squirrel-startup": "^1.0.0",
     "extract-zip": "^1.6.7",
     "hammerjs": "^2.0.8",
+    "material-design-icons": "^3.0.1",
     "moment": "^2.22.2",
     "ngx-childprocess": "0.0.6",
     "ngx-electron": "^2.0.0",
@@ -58,11 +59,12 @@
     "ngx-perfect-scrollbar": "^7.1.0",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
+    "typeface-roboto": "0.0.54",
     "zip-a-folder": "0.0.6",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.11.0",
+    "@angular-devkit/build-angular": "^0.12.2",
     "@angular/cli": "~7.1.1",
     "@angular/compiler-cli": "~7.1.0",
     "@angular/language-service": "~7.1.0",
